# Advent-of-Code-2023

./: .gitignore  Benchmark.hs  LICENSE  Main.hs  README.md  aoc23.cabal  get_input
exe/: Main.hs
solutions/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day2.hs  Day20.hs  Day21.hs  Day24.hs  Day25.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  Solutions.hs  Util.hs
solutions/Data/: SparseGrid.hs
