cabal-version:      3.0
name:               aoc23
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Michalis Pardalos
maintainer:         me@mpardalos.com
-- copyright:
category:           Game
build-type:         Simple
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable aoc23
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        text
    hs-source-dirs:   exe
    default-language: GHC2021
