cabal-version:      2.4
name:               aoc23
version:            0.1.0.0
author:             Michalis Pardalos
maintainer:         m.pardalos@gmail.com

common opts
    default-extensions: TypeApplications ViewPatterns GADTs ImportQualifiedPost
    default-language: GHC2021

library
    import: opts
    build-depends:
        base
      , safe
      , containers
      , unordered-containers
      , split
      , deepseq
      , bytestring
      , vector
      , matrix
      , optics
      , optics-th
      , massiv
      , attoparsec
      , hashable
      , parallel
    hs-source-dirs: solutions
    exposed-modules:  Solutions
    other-modules:
        Day1
      , Day2
      , Util

executable aoc23
    import: opts
    build-depends:
        base
      , aoc23
      , bytestring
      , clock
    main-is: Main.hs
    ghc-options: -threaded -with-rtsopts=-N

benchmark bench
    import: opts
    type: exitcode-stdio-1.0
    build-depends:
        base
      , aoc23
      , criterion
      , bytestring
      , containers
    main-is: Benchmark.hs
    ghc-options: -threaded -with-rtsopts=-N
